Laboratories/Lab_4/ex_2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    nl
    ws

Grammar

Rule 0     S' -> prog
Rule 1     prog -> decl_list stmt_list
Rule 2     decl_list -> decl_list decl
Rule 3     decl_list -> <empty>
Rule 4     decl -> type var_list S
Rule 5     decl -> type error S
Rule 6     type -> INT_TYPE
Rule 7     type -> DOUBLE_TYPE
Rule 8     var_list -> var
Rule 9     var_list -> var_list CM var
Rule 10    var -> ID array
Rule 11    array -> empty
Rule 12    array -> array SO INT SC
Rule 13    stmt_list -> stmt_list stmt
Rule 14    stmt_list -> stmt
Rule 15    stmt_list -> error stmt
Rule 16    stmt -> if
Rule 17    stmt -> while
Rule 18    stmt -> assignment
Rule 19    stmt -> print
Rule 20    stmt -> BO stmt_list BC
Rule 21    assignment -> id S
Rule 22    assignment -> id EQ exp S
Rule 23    stmt -> BO stmt_list error BC
Rule 24    stmt -> BO error BC
Rule 25    stmt -> error S
Rule 26    assignment -> id EQ error S
Rule 27    assignment -> error EQ exp S
Rule 28    print -> PRINT id S
Rule 29    if -> IF if_condition stmt
Rule 30    if -> IF if_condition stmt ELSE stmt
Rule 31    if_condition -> RO exp RC
Rule 32    while -> WHILE while_condition stmt
Rule 33    while_condition -> RO exp RC
Rule 34    exp -> exp AND exp
Rule 35    exp -> exp OR exp
Rule 36    exp -> NOT exp
Rule 37    exp -> exp EQ EQ exp
Rule 38    exp -> exp MIN exp
Rule 39    exp -> exp MAJ exp
Rule 40    exp -> exp MAJ_EQ exp
Rule 41    exp -> exp EQ_MAJ exp
Rule 42    exp -> exp MIN_EQ exp
Rule 43    exp -> exp EQ_MIN exp
Rule 44    exp -> exp PLUS exp
Rule 45    exp -> exp MINUS exp
Rule 46    exp -> exp STAR exp
Rule 47    exp -> exp DIV exp
Rule 48    exp -> RO exp RC
Rule 49    exp -> id
Rule 50    exp -> INT
Rule 51    exp -> DOUBLE
Rule 52    exp -> MINUS INT
Rule 53    exp -> MINUS DOUBLE
Rule 54    id -> ID
Rule 55    id -> ID SO INT SC
Rule 56    id -> ID SO ID SC
Rule 57    empty -> <empty>

Terminals, with rules where they appear

AND                  : 34
BC                   : 20 23 24
BO                   : 20 23 24
CM                   : 9
DIV                  : 47
DOUBLE               : 51 53
DOUBLE_TYPE          : 7
ELSE                 : 30
EQ                   : 22 26 27 37 37
EQ_MAJ               : 41
EQ_MIN               : 43
ID                   : 10 54 55 56 56
IF                   : 29 30
INT                  : 12 50 52 55
INT_TYPE             : 6
MAJ                  : 39
MAJ_EQ               : 40
MIN                  : 38
MINUS                : 45 52 53
MIN_EQ               : 42
NOT                  : 36
OR                   : 35
PLUS                 : 44
PRINT                : 28
RC                   : 31 33 48
RO                   : 31 33 48
S                    : 4 5 21 22 25 26 27 28
SC                   : 12 55 56
SO                   : 12 55 56
STAR                 : 46
WHILE                : 32
error                : 5 15 23 24 25 26 27
nl                   : 
ws                   : 

Nonterminals, with rules where they appear

array                : 10 12
assignment           : 18
decl                 : 2
decl_list            : 1 2
empty                : 11
exp                  : 22 27 31 33 34 34 35 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48
id                   : 21 22 26 28 49
if                   : 16
if_condition         : 29 30
print                : 19
prog                 : 0
stmt                 : 13 14 15 29 30 30 32
stmt_list            : 1 13 20 23
type                 : 4 5
var                  : 8 9
var_list             : 4 9
while                : 17
while_condition      : 32

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . decl_list stmt_list
    (2) decl_list -> . decl_list decl
    (3) decl_list -> .

    error           reduce using rule 3 (decl_list -> .)
    BO              reduce using rule 3 (decl_list -> .)
    INT_TYPE        reduce using rule 3 (decl_list -> .)
    DOUBLE_TYPE     reduce using rule 3 (decl_list -> .)
    IF              reduce using rule 3 (decl_list -> .)
    WHILE           reduce using rule 3 (decl_list -> .)
    PRINT           reduce using rule 3 (decl_list -> .)
    ID              reduce using rule 3 (decl_list -> .)

    prog                           shift and go to state 1
    decl_list                      shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> decl_list . stmt_list
    (2) decl_list -> decl_list . decl
    (13) stmt_list -> . stmt_list stmt
    (14) stmt_list -> . stmt
    (15) stmt_list -> . error stmt
    (4) decl -> . type var_list S
    (5) decl -> . type error S
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (6) type -> . INT_TYPE
    (7) type -> . DOUBLE_TYPE
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    error           shift and go to state 6
    BO              shift and go to state 12
    INT_TYPE        shift and go to state 13
    DOUBLE_TYPE     shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 3
    decl                           shift and go to state 4
    stmt                           shift and go to state 5
    type                           shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 3

    (1) prog -> decl_list stmt_list .
    (13) stmt_list -> stmt_list . stmt
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    $end            reduce using rule 1 (prog -> decl_list stmt_list .)
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 20
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 4

    (2) decl_list -> decl_list decl .

    error           reduce using rule 2 (decl_list -> decl_list decl .)
    BO              reduce using rule 2 (decl_list -> decl_list decl .)
    INT_TYPE        reduce using rule 2 (decl_list -> decl_list decl .)
    DOUBLE_TYPE     reduce using rule 2 (decl_list -> decl_list decl .)
    IF              reduce using rule 2 (decl_list -> decl_list decl .)
    WHILE           reduce using rule 2 (decl_list -> decl_list decl .)
    PRINT           reduce using rule 2 (decl_list -> decl_list decl .)
    ID              reduce using rule 2 (decl_list -> decl_list decl .)


state 5

    (14) stmt_list -> stmt .

    BO              reduce using rule 14 (stmt_list -> stmt .)
    error           reduce using rule 14 (stmt_list -> stmt .)
    IF              reduce using rule 14 (stmt_list -> stmt .)
    WHILE           reduce using rule 14 (stmt_list -> stmt .)
    PRINT           reduce using rule 14 (stmt_list -> stmt .)
    ID              reduce using rule 14 (stmt_list -> stmt .)
    $end            reduce using rule 14 (stmt_list -> stmt .)
    BC              reduce using rule 14 (stmt_list -> stmt .)


state 6

    (15) stmt_list -> error . stmt
    (25) stmt -> error . S
    (27) assignment -> error . EQ exp S
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    S               shift and go to state 23
    EQ              shift and go to state 24
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 22
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 7

    (4) decl -> type . var_list S
    (5) decl -> type . error S
    (8) var_list -> . var
    (9) var_list -> . var_list CM var
    (10) var -> . ID array

    error           shift and go to state 26
    ID              shift and go to state 28

    var_list                       shift and go to state 25
    var                            shift and go to state 27

state 8

    (16) stmt -> if .

    BO              reduce using rule 16 (stmt -> if .)
    error           reduce using rule 16 (stmt -> if .)
    IF              reduce using rule 16 (stmt -> if .)
    WHILE           reduce using rule 16 (stmt -> if .)
    PRINT           reduce using rule 16 (stmt -> if .)
    ID              reduce using rule 16 (stmt -> if .)
    $end            reduce using rule 16 (stmt -> if .)
    BC              reduce using rule 16 (stmt -> if .)
    ELSE            reduce using rule 16 (stmt -> if .)


state 9

    (17) stmt -> while .

    BO              reduce using rule 17 (stmt -> while .)
    error           reduce using rule 17 (stmt -> while .)
    IF              reduce using rule 17 (stmt -> while .)
    WHILE           reduce using rule 17 (stmt -> while .)
    PRINT           reduce using rule 17 (stmt -> while .)
    ID              reduce using rule 17 (stmt -> while .)
    $end            reduce using rule 17 (stmt -> while .)
    BC              reduce using rule 17 (stmt -> while .)
    ELSE            reduce using rule 17 (stmt -> while .)


state 10

    (18) stmt -> assignment .

    BO              reduce using rule 18 (stmt -> assignment .)
    error           reduce using rule 18 (stmt -> assignment .)
    IF              reduce using rule 18 (stmt -> assignment .)
    WHILE           reduce using rule 18 (stmt -> assignment .)
    PRINT           reduce using rule 18 (stmt -> assignment .)
    ID              reduce using rule 18 (stmt -> assignment .)
    $end            reduce using rule 18 (stmt -> assignment .)
    BC              reduce using rule 18 (stmt -> assignment .)
    ELSE            reduce using rule 18 (stmt -> assignment .)


state 11

    (19) stmt -> print .

    BO              reduce using rule 19 (stmt -> print .)
    error           reduce using rule 19 (stmt -> print .)
    IF              reduce using rule 19 (stmt -> print .)
    WHILE           reduce using rule 19 (stmt -> print .)
    PRINT           reduce using rule 19 (stmt -> print .)
    ID              reduce using rule 19 (stmt -> print .)
    $end            reduce using rule 19 (stmt -> print .)
    BC              reduce using rule 19 (stmt -> print .)
    ELSE            reduce using rule 19 (stmt -> print .)


state 12

    (20) stmt -> BO . stmt_list BC
    (23) stmt -> BO . stmt_list error BC
    (24) stmt -> BO . error BC
    (13) stmt_list -> . stmt_list stmt
    (14) stmt_list -> . stmt
    (15) stmt_list -> . error stmt
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    error           shift and go to state 30
    BO              shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 29
    stmt                           shift and go to state 5
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 13

    (6) type -> INT_TYPE .

    error           reduce using rule 6 (type -> INT_TYPE .)
    ID              reduce using rule 6 (type -> INT_TYPE .)


state 14

    (7) type -> DOUBLE_TYPE .

    error           reduce using rule 7 (type -> DOUBLE_TYPE .)
    ID              reduce using rule 7 (type -> DOUBLE_TYPE .)


state 15

    (29) if -> IF . if_condition stmt
    (30) if -> IF . if_condition stmt ELSE stmt
    (31) if_condition -> . RO exp RC

    RO              shift and go to state 32

    if_condition                   shift and go to state 31

state 16

    (32) while -> WHILE . while_condition stmt
    (33) while_condition -> . RO exp RC

    RO              shift and go to state 34

    while_condition                shift and go to state 33

state 17

    (21) assignment -> id . S
    (22) assignment -> id . EQ exp S
    (26) assignment -> id . EQ error S

    S               shift and go to state 35
    EQ              shift and go to state 36


state 18

    (28) print -> PRINT . id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    ID              shift and go to state 19

    id                             shift and go to state 37

state 19

    (54) id -> ID .
    (55) id -> ID . SO INT SC
    (56) id -> ID . SO ID SC

    S               reduce using rule 54 (id -> ID .)
    EQ              reduce using rule 54 (id -> ID .)
    AND             reduce using rule 54 (id -> ID .)
    OR              reduce using rule 54 (id -> ID .)
    MIN             reduce using rule 54 (id -> ID .)
    MAJ             reduce using rule 54 (id -> ID .)
    MAJ_EQ          reduce using rule 54 (id -> ID .)
    EQ_MAJ          reduce using rule 54 (id -> ID .)
    MIN_EQ          reduce using rule 54 (id -> ID .)
    EQ_MIN          reduce using rule 54 (id -> ID .)
    PLUS            reduce using rule 54 (id -> ID .)
    MINUS           reduce using rule 54 (id -> ID .)
    STAR            reduce using rule 54 (id -> ID .)
    DIV             reduce using rule 54 (id -> ID .)
    RC              reduce using rule 54 (id -> ID .)
    SO              shift and go to state 38


state 20

    (13) stmt_list -> stmt_list stmt .

    BO              reduce using rule 13 (stmt_list -> stmt_list stmt .)
    error           reduce using rule 13 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 13 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 13 (stmt_list -> stmt_list stmt .)
    PRINT           reduce using rule 13 (stmt_list -> stmt_list stmt .)
    ID              reduce using rule 13 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 13 (stmt_list -> stmt_list stmt .)
    BC              reduce using rule 13 (stmt_list -> stmt_list stmt .)


state 21

    (25) stmt -> error . S
    (27) assignment -> error . EQ exp S

    S               shift and go to state 23
    EQ              shift and go to state 24


state 22

    (15) stmt_list -> error stmt .

    BO              reduce using rule 15 (stmt_list -> error stmt .)
    error           reduce using rule 15 (stmt_list -> error stmt .)
    IF              reduce using rule 15 (stmt_list -> error stmt .)
    WHILE           reduce using rule 15 (stmt_list -> error stmt .)
    PRINT           reduce using rule 15 (stmt_list -> error stmt .)
    ID              reduce using rule 15 (stmt_list -> error stmt .)
    $end            reduce using rule 15 (stmt_list -> error stmt .)
    BC              reduce using rule 15 (stmt_list -> error stmt .)


state 23

    (25) stmt -> error S .

    BO              reduce using rule 25 (stmt -> error S .)
    error           reduce using rule 25 (stmt -> error S .)
    IF              reduce using rule 25 (stmt -> error S .)
    WHILE           reduce using rule 25 (stmt -> error S .)
    PRINT           reduce using rule 25 (stmt -> error S .)
    ID              reduce using rule 25 (stmt -> error S .)
    $end            reduce using rule 25 (stmt -> error S .)
    BC              reduce using rule 25 (stmt -> error S .)
    ELSE            reduce using rule 25 (stmt -> error S .)


state 24

    (27) assignment -> error EQ . exp S
    (34) exp -> . exp AND exp
    (35) exp -> . exp OR exp
    (36) exp -> . NOT exp
    (37) exp -> . exp EQ EQ exp
    (38) exp -> . exp MIN exp
    (39) exp -> . exp MAJ exp
    (40) exp -> . exp MAJ_EQ exp
    (41) exp -> . exp EQ_MAJ exp
    (42) exp -> . exp MIN_EQ exp
    (43) exp -> . exp EQ_MIN exp
    (44) exp -> . exp PLUS exp
    (45) exp -> . exp MINUS exp
    (46) exp -> . exp STAR exp
    (47) exp -> . exp DIV exp
    (48) exp -> . RO exp RC
    (49) exp -> . id
    (50) exp -> . INT
    (51) exp -> . DOUBLE
    (52) exp -> . MINUS INT
    (53) exp -> . MINUS DOUBLE
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    NOT             shift and go to state 40
    RO              shift and go to state 42
    INT             shift and go to state 44
    DOUBLE          shift and go to state 45
    MINUS           shift and go to state 41
    ID              shift and go to state 19

    exp                            shift and go to state 39
    id                             shift and go to state 43

state 25

    (4) decl -> type var_list . S
    (9) var_list -> var_list . CM var

    S               shift and go to state 46
    CM              shift and go to state 47


state 26

    (5) decl -> type error . S

    S               shift and go to state 48


state 27

    (8) var_list -> var .

    S               reduce using rule 8 (var_list -> var .)
    CM              reduce using rule 8 (var_list -> var .)


state 28

    (10) var -> ID . array
    (11) array -> . empty
    (12) array -> . array SO INT SC
    (57) empty -> .

    SO              reduce using rule 57 (empty -> .)
    S               reduce using rule 57 (empty -> .)
    CM              reduce using rule 57 (empty -> .)

    array                          shift and go to state 49
    empty                          shift and go to state 50

state 29

    (20) stmt -> BO stmt_list . BC
    (23) stmt -> BO stmt_list . error BC
    (13) stmt_list -> stmt_list . stmt
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    BC              shift and go to state 51
    error           shift and go to state 52
    BO              shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 20
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 30

    (24) stmt -> BO error . BC
    (15) stmt_list -> error . stmt
    (25) stmt -> error . S
    (27) assignment -> error . EQ exp S
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    BC              shift and go to state 53
    S               shift and go to state 23
    EQ              shift and go to state 24
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 22
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 31

    (29) if -> IF if_condition . stmt
    (30) if -> IF if_condition . stmt ELSE stmt
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 54
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 32

    (31) if_condition -> RO . exp RC
    (34) exp -> . exp AND exp
    (35) exp -> . exp OR exp
    (36) exp -> . NOT exp
    (37) exp -> . exp EQ EQ exp
    (38) exp -> . exp MIN exp
    (39) exp -> . exp MAJ exp
    (40) exp -> . exp MAJ_EQ exp
    (41) exp -> . exp EQ_MAJ exp
    (42) exp -> . exp MIN_EQ exp
    (43) exp -> . exp EQ_MIN exp
    (44) exp -> . exp PLUS exp
    (45) exp -> . exp MINUS exp
    (46) exp -> . exp STAR exp
    (47) exp -> . exp DIV exp
    (48) exp -> . RO exp RC
    (49) exp -> . id
    (50) exp -> . INT
    (51) exp -> . DOUBLE
    (52) exp -> . MINUS INT
    (53) exp -> . MINUS DOUBLE
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    NOT             shift and go to state 40
    RO              shift and go to state 42
    INT             shift and go to state 44
    DOUBLE          shift and go to state 45
    MINUS           shift and go to state 41
    ID              shift and go to state 19

    exp                            shift and go to state 55
    id                             shift and go to state 43

state 33

    (32) while -> WHILE while_condition . stmt
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (23) stmt -> . BO stmt_list error BC
    (24) stmt -> . BO error BC
    (25) stmt -> . error S
    (29) if -> . IF if_condition stmt
    (30) if -> . IF if_condition stmt ELSE stmt
    (32) while -> . WHILE while_condition stmt
    (21) assignment -> . id S
    (22) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 56
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 34

    (33) while_condition -> RO . exp RC
    (34) exp -> . exp AND exp
    (35) exp -> . exp OR exp
    (36) exp -> . NOT exp
    (37) exp -> . exp EQ EQ exp
    (38) exp -> . exp MIN exp
    (39) exp -> . exp MAJ exp
    (40) exp -> . exp MAJ_EQ exp
    (41) exp -> . exp EQ_MAJ exp
    (42) exp -> . exp MIN_EQ exp
    (43) exp -> . exp EQ_MIN exp
    (44) exp -> . exp PLUS exp
    (45) exp -> . exp MINUS exp
    (46) exp -> . exp STAR exp
    (47) exp -> . exp DIV exp
    (48) exp -> . RO exp RC
    (49) exp -> . id
    (50) exp -> . INT
    (51) exp -> . DOUBLE
    (52) exp -> . MINUS INT
    (53) exp -> . MINUS DOUBLE
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    NOT             shift and go to state 40
    RO              shift and go to state 42
    INT             shift and go to state 44
    DOUBLE          shift and go to state 45
    MINUS           shift and go to state 41
    ID              shift and go to state 19

    exp                            shift and go to state 57
    id                             shift and go to state 43

state 35

    (21) assignment -> id S .

    BO              reduce using rule 21 (assignment -> id S .)
    error           reduce using rule 21 (assignment -> id S .)
    IF              reduce using rule 21 (assignment -> id S .)
    WHILE           reduce using rule 21 (assignment -> id S .)
    PRINT           reduce using rule 21 (assignment -> id S .)
    ID              reduce using rule 21 (assignment -> id S .)
    $end            reduce using rule 21 (assignment -> id S .)
    BC              reduce using rule 21 (assignment -> id S .)
    ELSE            reduce using rule 21 (assignment -> id S .)


state 36

    (22) assignment -> id EQ . exp S
    (26) assignment -> id EQ . error S
    (34) exp -> . exp AND exp
    (35) exp -> . exp OR exp
    (36) exp -> . NOT exp
    (37) exp -> . exp EQ EQ exp
    (38) exp -> . exp MIN exp
    (39) exp -> . exp MAJ exp
    (40) exp -> . exp MAJ_EQ exp
    (41) exp -> . exp EQ_MAJ exp
    (42) exp -> . exp MIN_EQ exp
    (43) exp -> . exp EQ_MIN exp
    (44) exp -> . exp PLUS exp
    (45) exp -> . exp MINUS exp
    (46) exp -> . exp STAR exp
    (47) exp -> . exp DIV exp
    (48) exp -> . RO exp RC
    (49) exp -> . id
    (50) exp -> . INT
    (51) exp -> . DOUBLE
    (52) exp -> . MINUS INT
    (53) exp -> . MINUS DOUBLE
    (54) id -> . ID
    (55) id -> . ID SO INT SC
    (56) id -> . ID SO ID SC

    error           shift and go to state 59
    NOT             shift and go to state 40
    RO              shift and go to state 42
    INT             shift and go to state 44
    DOUBLE          shift and go to state 45
    MINUS           shift and go to state 41
    ID              shift and go to state 19

    id                             shift and go to state 43
    exp                            shift and go to state 58

state 37

    (28) print -> PRINT id . S

    S               shift and go to state 60


state 38

    (55) id -> ID SO . INT SC
    (56) id -> ID SO . ID SC

    INT             shift and go to state 62
    ID              shift and go to state 61


state 39

    (27) assignment -> error EQ exp . S
    (34) exp -> exp . AND exp
    (35) exp -> exp . OR exp
    (37) exp -> exp . EQ EQ exp
    (38) exp -> exp . MIN exp
    (39) exp -> exp . MAJ exp
    (40) exp -> exp . MAJ_EQ exp
    (41) exp -> exp . EQ_MAJ exp
    (42) exp -> exp . MIN_EQ exp
    (43) exp -> exp . EQ_MIN exp
    (44) exp -> exp . PLUS exp
    (45) exp -> exp . MINUS exp
    (46) exp -> exp . STAR exp
    (47) exp -> exp . DIV exp
